--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,20 @@
 <h1>signup to cart</h1>
 
-<%= form_for @user, url: users_path, html: { multipart: true} do |f| %>
+<%= form_for @user, url: root_path, html: { multipart: true} do |f| %>
   <%= f.label :username, "Username" %>
   <%= f.text_field :username %>
-
+<br>
   <%= f.label :first, "First Name" %>
   <%= f.text_field :first %>
-
+<br>
+  <%= f.label :last, "Last Name" %>
+  <%= f.text_field :last %>
+<br>
+  <%= f.label :age, "Age" %>
+  <%= f.number_field :age %>
+<br>
   <%= f.label :avatar, 'Profile Photo' %>
   <%= f.file_field :avatar %>
-
+<br>
   <%= f.submit %>
 <% end %>
