--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -1,17 +1,24 @@
-<h1>Arts#new</h1>
-<p>Find me in app/views/arts/new.html.erb</p>
-<%= form_for @photo do |f| %>
-  <%= render 'shared/errors', object: @photo %>
+<h1>post cartwork</h1>
 
-  <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control' %>
-  </div>
+<form>
+<%= form_for @art, url: root_path, html: { multipart: true} do |f| %>
 
-  <div class="form-group">
-    <%= f.label :image %>
-    <%= f.file_field :image, class: 'form-control'%>
-  </div>
-
-  <%= f.submit 'Upload', class: 'btn btn-primary' %>
+<div class="form-group">
+  <%= f.text_field :name, class:"form-control", placeholder:"Name of Artwork"%>
+</div>
+<div class="form-group">
+  <%= f.text_field :style, class:"form-control", placeholder:"Art Style" %>
+</div>
+<div class="form-group">
+<%= f.number_field :price, class:"form-control", placeholder:"Price of Artwork"%>
+</div>
+<div class="form-group">
+  <%= f.text_field :details, class:"form-control", placeholder:"Details of Artwork" %>
+</div>
+<div class="form-group">
+  <%= f.label :avatar, "Artwork Picture" %>
+  <%= f.file_field :avatar, class:"form-control", type:"file", id:"exampleInputFile", placeholder:"Artwork" %>
+</div>
+  <%= f.submit class:'btn btn-default' %>
 <% end %>
+</form>
