--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Homes#index</h1>
-<p>Find me in app/views/homes/index.html.erb</p>
+<div style="background-image: url(https://youtu.be/oT4Bq8zYN4E);"class="jumbotron">
+  <h1 class="display-3">cart</h1>
+  <p style="text-align: center"class="lead">Buy unique artwork from artists across the globe </p>
+  <p style="text-align: center;"class="lead">
+    <a class="btn btn-warning btn-lg" href="users/new" role="button">Signup</a>
+  </p>
+  <p style="text-align: center;"class="lead">
+    <a class="btn btn-success btn-lg" href="sessions/new" role="button">Login</a>
+  </p>
+</div>
