--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,28 @@
 <html>
 <head>
   <title>Cart</title>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div style="text-align: right;margin: 0 10px 0 0"class="">
+<% if logged_in? %>
+  <%= link_to 'Logout', logout_path %>
+<% else %>
+  <%= link_to 'Login', new_session_path %>
+<% end %>
+</div>
+<div style="text-align: center;"class="">
+<% if flash[:success] %>
+  <div class="alert alert-success"> <%= flash[:success] %> </div>
+  <% elsif flash[:failure] %>
+  <div class="alert alert-danger"> <%= flash[:failure]  %></div>
+  <% end %>
+</div>
+<script>$('.alert').delay(6000).slideUp()</script>
+
 
 <%= yield %>
 
