--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -1,24 +1,16 @@
-<h1>post cartwork</h1>
+<h1>post art</h1>
 
-<form>
-<%= form_for @art, url: root_path, html: { multipart: true} do |f| %>
-
-<div class="form-group">
-  <%= f.text_field :name, class:"form-control", placeholder:"Name of Artwork"%>
-</div>
-<div class="form-group">
-  <%= f.text_field :style, class:"form-control", placeholder:"Art Style" %>
-</div>
-<div class="form-group">
-<%= f.number_field :price, class:"form-control", placeholder:"Price of Artwork"%>
-</div>
-<div class="form-group">
-  <%= f.text_field :details, class:"form-control", placeholder:"Details of Artwork" %>
-</div>
-<div class="form-group">
-  <%= f.label :avatar, "Artwork Picture" %>
-  <%= f.file_field :avatar, class:"form-control", type:"file", id:"exampleInputFile", placeholder:"Artwork" %>
-</div>
+<%= form_for @art, url: create_user_path, html: { multipart: true} do |f| %>
+  <%= f.text_field :name, class:"form-control", placeholder:"Name of artwork"%>
+  <br>
+  <%= f.text_field :style, class:"form-control", placeholder:"Style of artwork" %>
+  <br>
+  <%= f.number_field :price, class:"form-control", type:"email", placeholder:"Price of artwork"%>
+  <br>
+  <%= f.text_field :details, class:"form-control", placeholder:"Details of artwork" %>
+  <br>
+  <%= f.label :avatar, "Profile Picture" %>
+  <%= f.file_field :avatar, class:"form-control", type:"file", id:"exampleInputFile", placeholder:"Profile Picture" %>
+  <br>
   <%= f.submit class:'btn btn-default' %>
 <% end %>
-</form>
