--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,10 +1,20 @@
-<div style="background-image: url(https://youtu.be/oT4Bq8zYN4E);"class="jumbotron">
-  <h1 class="display-3">cart</h1>
-  <p style="text-align: center"class="lead">Buy unique artwork from artists across the globe </p>
-  <p style="text-align: center;"class="lead">
-    <a class="btn btn-warning btn-lg" href="users/new" role="button">Signup</a>
-  </p>
-  <p style="text-align: center;"class="lead">
-    <a class="btn btn-success btn-lg" href="sessions/new" role="button">Login</a>
-  </p>
-</div>
+<section class="content-section video-section">
+  <div class="pattern-overlay">
+  <a id="bgndVideo" class="player" data-property="{videoURL:'https://youtu.be/V4Oosy-ZtGY',containment:'.video-section', quality:'large', autoPlay:true, mute:true, opacity:1}">bg</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+        <h1>cart</h1>
+        <h3>Buy unique artwork from artists across the globe</h3>
+        <p style="text-align: center;"class="lead">
+          <a class="btn btn-warning btn-lg" href="users/new" role="button">Signup</a>
+        </p>
+        <p style="text-align: center;"class="lead">
+          <a class="btn btn-primary btn-lg" href="sessions/new" role="button">Login</a>
+       </p>
+	   </div>
+
+      </div>
+    </div>
+  </div>
+</section>
