--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,19 +2,35 @@
 <html>
 <head>
   <title>Cart</title>
+  <link href='http://fonts.googleapis.com/css?family=Buenard:700' rel='stylesheet' type='text/css'>
+
+
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src="http://pupunzi.com/mb.components/mb.YTPlayer/demo/inc/jquery.mb.YTPlayer.js"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div style="text-align: right;margin: 0 10px 0 0"class="">
+<span style="text-align: right;margin: 0 10px 0 10px"class="">
+  <%= link_to "Home", root_path %>
+</span>
+<span style="text-align: right;margin: 0 10px 0 10px"class="">
+  <%= link_to "Users", users_path %>
+</span>
+<span style="text-align: right;margin: 0 10px 0 10px"class="">
+  <% if logged_in? %>
+  <%= link_to "Profile", show_user_path(current_user)%>
+  <% end %>
+</span>
+<span style="text-align: right;margin: 0 10px 0 10px"class="">
 <% if logged_in? %>
   <%= link_to 'Logout', logout_path %>
 <% else %>
   <%= link_to 'Login', new_session_path %>
 <% end %>
-</div>
+</span>
+
 <div style="text-align: center;"class="">
 <% if flash[:success] %>
   <div class="alert alert-success"> <%= flash[:success] %> </div>
