--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,10 @@
-<h1>users</h1>
+<h1 style="background: rgb(255, 236, 110); opacity: 0.8">artists & collectors</h1>
+
+<% @users.each do |u| %>
+<div style="display: inline-block; margin: 0 5%;">
+<h2>username: <%= u.username %></h2>
+<p><%= image_tag u.avatar.url(:medium) %></p>
+<p>Name: <%= u.first %><%= u.last %></p>
+<p>Age: <%= u.age %></p>
+</div>
+  <% end %>
