--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,20 +1,49 @@
-<section class="content-section video-section">
-  <div class="pattern-overlay">
-  <a id="bgndVideo" class="player" data-property="{videoURL:'https://youtu.be/V4Oosy-ZtGY',containment:'.video-section', quality:'large', autoPlay:true, mute:true, opacity:1}">bg</a>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-        <h1>cart</h1>
-        <h3>Buy unique artwork from artists across the globe</h3>
-        <p style="text-align: center;"class="lead">
-          <a class="btn btn-warning btn-lg" href="users/new" role="button">Signup</a>
-        </p>
-        <p style="text-align: center;"class="lead">
-          <a class="btn btn-primary btn-lg" href="sessions/new" role="button">Login</a>
-       </p>
-	   </div>
 
+<% if !logged_in? %>
+  <section class="content-section video-section">
+    <div class="pattern-overlay">
+    <a id="bgndVideo" class="player" data-property="{videoURL:'https://youtu.be/V4Oosy-ZtGY',containment:'.video-section', quality:'large', autoPlay:true, mute:true, opacity:1}">bg</a>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+          <h1>cart</h1>
+          <h3>Buy unique artwork from artists across the globe</h3>
+          <p style="text-align: center;"class="lead">
+            <a class="btn btn-warning btn-lg" href="/users/new" role="button">Signup</a>
+          </p>
+          <p style="text-align: center;"class="lead">
+            <a class="btn btn-success btn-lg" href="/sessions/new" role="button">Login</a>
+         </p>
+  	   </div>
+
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+<h1 style="background: rgba(71, 71, 71, 0.59); color: white;margin-top: 10px;">cartwork</h1>
+<% @arts.each do |u| %>
+<div style="border:2px solid black; background: white;text-align: center;display: inline-block; margin: 0 3%; width: 304px;">
+<h2><%= u.name %></h2>
+<h5> <%= link_to u.user.username, show_user_path(u.user) %></h5>
+<img><%= image_tag u.avatar.url(:medium) %></img>
+<p>Style: <%= u.style %></p>
+<p style=" width: 100px; margin: 0 auto">Cost: $<%= u.price %></p>
+<p style="">Details: <%= u.details %></p>
+</div>
+<% end %>
+
+
+<% end %>
+<% if logged_in? %>
+<h1 style="background: rgba(71, 71, 71, 0.59); color: white;margin-top: 0;">news feed</h1>
+<% @arts.each do |u| %>
+<div style="border:2px solid black; background: white;text-align: center;display: inline-block; margin: 0 3%; width: 304px;">
+<h2><%= u.name %></h2>
+<h5> <%= link_to u.user.username, show_user_path(u.user) %></h5>
+<p><%= image_tag u.avatar.url(:medium) %></p>
+<p>Style:<%= u.style %></p>
+<p style=" width: 100px; margin: 0 auto">Cost:$<%= u.price %></p>
+<p style="">Details:<%= u.details %></p>
+</div>
+<% end %>
+<% end %>
