--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,39 +12,28 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<span style="text-align: right;margin: 0 10px 0 10px"class="">
-  <%= link_to "Home", root_path %>
-</span>
-<span style="text-align: right;margin: 0 10px 0 10px"class="">
-  <%= link_to "Users", users_path %>
-</span>
-<span style="text-align: right;margin: 0 10px 0 10px"class="">
-  <%= link_to "Artwork", art_index_path %>
-</span>
-<span style="text-align: right;margin: 0 10px 0 10px"class="">
+  <nav style="text-align:center;"class="navbar navbar-inverse">
+    <a style="color: black;font-weight: bold;"class="btn btn-warning btn-lg" href="/" role="button">home</a>
+    <a style="color: black;font-weight: bold;"class="btn btn-warning btn-lg" href="/users" role="button">artists & collectors</a>
+    <a style="color: black;font-weight: bold;"class="btn btn-warning btn-lg" href="/arts" role="button">artwork</a>
   <% if logged_in? %>
-  <%= link_to "Profile", show_user_path(current_user)%>
+  <%= link_to "Profile", show_user_path(current_user), class: "btn btn-warning btn-lg", style: "color: black;font-weight: bold;"%>
   <% end %>
-</span>
-<span style="text-align: right;margin: 0 10px 0 10px"class="">
-  <%= link_to "cart(coming soon)"%>
-</span>
-<span style="text-align: right;margin: 0 10px 0 10px"class="">
-<% if logged_in? %>
-  <%= link_to 'Logout', logout_path %>
-<% else %>
-  <%= link_to 'Login', new_session_path %>
-<% end %>
-</span>
-
-<div style="text-align: center;"class="">
-<% if flash[:success] %>
-  <div class="alert alert-success"> <%= flash[:success] %> </div>
-  <% elsif flash[:failure] %>
-  <div class="alert alert-danger"> <%= flash[:failure]  %></div>
+  <a style="color: black;font-weight: bold;"class="btn btn-warning btn-lg" href="#" role="button">cart(coming soon)</a>
+  <% if logged_in? %>
+  <a style="color: black;font-weight: bold;"class="btn btn-warning btn-lg" href="/logout" role="button">logout</a>
+  <% else %>
+  <a style="color: black;font-weight: bold;"class="btn btn-warning btn-lg" href="/sessions/new" role="button">login</a>
   <% end %>
-</div>
-<script>$('.alert').delay(6000).slideUp()</script>
+  </nav>
+  <div style="text-align: center;"class="">
+  <% if flash[:success] %>
+    <div class="alert alert-success"> <%= flash[:success] %> </div>
+    <% elsif flash[:failure] %>
+    <div class="alert alert-danger"> <%= flash[:failure]  %></div>
+    <% end %>
+  </div>
+  <script>$('.alert').delay(6000).slideUp()</script>
 
 
 <%= yield %>
