--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,12 @@
 <h1 style="background: rgb(255, 236, 110); opacity: 0.8">artists & collectors</h1>
 
 <% @users.each do |u| %>
-<div style="display: inline-block; margin: 0 5%;">
-<h2>username: <%= u.username %></h2>
+<div style="text-align: center;display: inline-block; margin: 3px 5%; width: 305px;background: rgb(254, 255, 219);border: 2px solid rgb(255, 230, 0); border-radius: 5%;">
+<h4>username: <%=  link_to u.username, show_user_path(u) %></h4>
 <p><%= image_tag u.avatar.url(:medium) %></p>
-<p>Name: <%= u.first %><%= u.last %></p>
+<p>Name: <%= u.first %> <%= u.last %></p>
 <p>Age: <%= u.age %></p>
+<p>Art Created: <%= u.arts.count %></p>
+<p>Art Collected: 0</p>
 </div>
-  <% end %>
+<% end %>
