--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>signup to cart</h1>
-
-<%= form_for @user, url: create_user_path, html: { multipart: true} do |f| %>
+<div style="width: 40%;margin: 0 auto;"class="">
+  <%= form_for @user, url: create_user_path, html: { multipart: true} do |f| %>
   <%= f.text_field :username, class:"form-control", placeholder:"Username"%>
   <br>
   <%= f.password_field :password, type:"password", class:"form-control", placeholder:"Password" %>
@@ -18,3 +18,4 @@
   <br>
   <%= f.submit class:'btn btn-default' %>
 <% end %>
+</div>
