--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,7 +32,15 @@
         <div >
       <div class="tab-content">
         <div class="tab-pane fade in active" id="tab1">
-          <h3>This is tab 1</h3>
+          <% @user.arts.each do |a| %>
+          <div style="border:2px solid black; background: white;text-align: center;display: inline-block; margin: 10px 3%; width: 304px;">
+          <h3> <%=a.name  %></h3>
+          <h3> <%= image_tag a.avatar.url(:medium) %></h3>
+          <h5>Style: <%=a.style %></h5>
+          <h5>Price: $<%=a.price  %></h5>
+          <h5>Details: <%=a.details  %></h5>
+          </div>
+          <% end %>
         </div>
         <div class="tab-pane fade in" id="tab2">
           <h3>This is tab 2</h3>
