--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -3,10 +3,10 @@
 <p style="text-align: center;"class="lead"><a class="btn btn-success btn-lg" href="/arts/new" role="button">post art</a></p>
 <% end %>
 <% @arts.each do |u| %>
-<div style="background: white;text-align: center; border: 2px solid black;display: inline-block; margin: 0 3%; width: 304px;">
-<h2><%= u.name %></h2>
-<h5> <%= image_tag u.user.avatar.url(:thumb), style: "border-radius: 50%" %><%= link_to u.user.username, show_user_path(u.user) %></h5>
+<div style="border-radius: 5%;background: white;text-align: center; border: 2px solid black;display: inline-block; margin: 3px 3%; width: 304px;">
+<h5> <%= image_tag u.user.avatar.url(:thumb), style: "border-radius: 50%; float: left; margin: 0 5px 5px;" %><%= link_to u.user.username, show_user_path(u.user), style: "margin-right: 20%; font-size: 20px"%></h5>
 <p><%= image_tag u.avatar.url(:medium) %></p>
+<h5 style="font-weight: bold;"><%= u.name %></h5>
 <p>Style:<%= u.style %></p>
 <p>Cost:$<%= u.price %></p>
 <p>Details:<%= u.details %></p>
