--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -35,7 +35,7 @@
 
 <% end %>
 <% if logged_in? %>
-<h1 style="background: rgba(71, 71, 71, 0.59); color: white;margin-top: 0;">news feed</h1>
+<h1 style="background: rgba(71, 71, 71, 0.59); color: white;margin-top: 0;">cartfeed</h1>
 <% @arts.each do |u| %>
 <div style="border:2px solid black; background: white;text-align: center;display: inline-block; margin: 0 3%; width: 304px;">
 <h2><%= u.name %></h2>
