--- a/app/views/arts/edit.html.erb
+++ b/app/views/arts/edit.html.erb
@@ -1,2 +1,17 @@
-<h1>Arts#edit</h1>
-<p>Find me in app/views/arts/edit.html.erb</p>
+<h1>edit artpiece</h1>
+<div style="width:50%; margin: 0 auto;">
+<%= form_for @art, url: edit_art_path, html: { multipart: true} do |f| %>
+  <h5>Name</h5>
+<%= f.text_field :name, class:"form-control", placeholder:"Name"%>
+  <h5>Style</h5>
+<%= f.text_field :style, class:"form-control", placeholder:"Style" %>
+  <h5>Price</h5>
+<%= f.text_field :price, class:"form-control", placeholder:"Price" %>
+  <h5>Details</h5>
+<%= f.text_field :details, class:"form-control", placeholder:"Details" %>
+<%= f.label :avatar, "Profile Picture" %>
+<%= f.file_field :avatar, class:"form-control", type:"file", id:"exampleInputFile", placeholder:"Profile Picture" %>
+<br>
+<%= f.submit class:'btn btn-default' %>
+<% end %>
+</div>
