--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -37,7 +37,7 @@
 <% if logged_in? %>
 <h1 style="background: rgba(71, 71, 71, 0.59); color: white;margin-top: 0;">cartfeed</h1>
 <% @arts.each do |u| %>
-<div style="border:2px solid black; background: white;text-align: center;display: inline-block; margin: 0 3%; width: 304px;">
+<div style="border-radius: 5%;border:2px solid black; background: white;text-align: center;display: inline-block; margin: 0 3%; width: 304px;">
 <h2><%= u.name %></h2>
 <h5> <%= link_to u.user.username, show_user_path(u.user) %></h5>
 <p><%= image_tag u.avatar.url(:medium) %></p>
