--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,6 +32,7 @@
         <div >
       <div class="tab-content">
         <div class="tab-pane fade in active" id="tab1">
+          <p style="text-align: center;"class="lead"><a class="btn btn-success btn-lg" href="/arts/new" role="button">post art</a></p>
           <% @user.arts.each do |a| %>
           <div style="border:2px solid black; background: white;text-align: center;display: inline-block; margin: 10px 3%; width: 304px;">
           <h3> <%=a.name  %></h3>
@@ -41,7 +42,7 @@
           <h5>Details: <%=a.details  %></h5>
           <% if current_user == a.user %>
           <%= link_to "edit piece", edit_art_path(a), class: "btn btn-success btn-lg", style: "margin-bottom: 5px;color: black;font-weight: bold;"%>
-          <%= link_to "delete piece", destroy_art_path, class: "btn btn-danger btn-lg", style: "color: black;font-weight: bold;", method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
+          <%= link_to "delete piece", destroy_art_path(a), class: "btn btn-danger btn-lg", style: "color: black;font-weight: bold;", method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
           <% end %>
 
           </div>
