--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -9,7 +9,7 @@
   <br>
   <%= f.text_field :details, class:"form-control", placeholder:"Details of artwork" %>
   <br>
-  <%= f.label :avatar, "Profile Picture" %>
+  <%= f.label :avatar, "Art picture" %>
   <%= f.file_field :avatar, class:"form-control", type:"file", id:"exampleInputFile", placeholder:"Profile Picture" %>
   <br>
   <%= f.submit class:'btn btn-default' %>
