--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -23,9 +23,9 @@
 <h1 style="background: rgba(71, 71, 71, 0.59); color: white;margin-top: 10px;">cartwork</h1>
 <% @arts.each do |u| %>
 <div style="border:2px solid black; background: white;text-align: center;display: inline-block; margin: 0 3%; width: 304px;">
-<h2><%= u.name %></h2>
-<h5> <%= link_to u.user.username, show_user_path(u.user) %></h5>
+<h5> <%= image_tag u.user.avatar.url(:thumb), style: "border-radius: 50%; float: left; margin: 0 5px 5px;" %><%= link_to u.user.username, show_user_path(u.user), style: "margin-right: 20%; font-size: 20px"%></h5>
 <img><%= image_tag u.avatar.url(:medium) %></img>
+<h2><%= link_to u.name, show_art_path(u) %></h2>
 <p>Style: <%= u.style %></p>
 <p style=" width: 100px; margin: 0 auto">Cost: $<%= u.price %></p>
 <p style="">Details: <%= u.details %></p>
@@ -38,9 +38,9 @@
 <h1 style="background: rgba(71, 71, 71, 0.59); color: white;margin-top: 0;">cartfeed</h1>
 <% @arts.each do |u| %>
 <div style="border-radius: 5%;border:2px solid black; background: white;text-align: center;display: inline-block; margin: 0 3%; width: 304px;">
-<h2><%= u.name %></h2>
-<h5> <%= link_to u.user.username, show_user_path(u.user) %></h5>
+<h5> <%= image_tag u.user.avatar.url(:thumb), style: "border-radius: 50%; float: left; margin: 0 5px 5px;" %><%= link_to u.user.username, show_user_path(u.user), style: "margin-right: 20%; font-size: 20px"%></h5>
 <p><%= image_tag u.avatar.url(:medium) %></p>
+<h2><%= link_to u.name, show_art_path(u) %></h2>
 <p>Style:<%= u.style %></p>
 <p style=" width: 100px; margin: 0 auto">Cost:$<%= u.price %></p>
 <p style="">Details:<%= u.details %></p>
