--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -4,3 +4,4 @@
 <p style="text-align: center;">Style: <%= @art.style %></p>
 <p style="text-align: center;">Cost: <%= @art.price %></p>
 <p style="text-align: center;">Details: <%= @art.details%></p>
+<p style="text-align: center;">Likes: <%= @art.likes.count %></p>
