--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,13 +1,13 @@
-<h1 style="background: rgba(71, 71, 71, 0.59); color: white;margin-top: 0;">arts</h1>
+<h1 style="background: #2e6da4;color:black; opacity: 0.8; margin-top:0">arts</h1>
 <% if logged_in? %>
 <p style="text-align: center;"class="lead"><a class="btn btn-success btn-lg" href="/arts/new" role="button">post art</a></p>
 <% end %>
 <% @arts.each do |u| %>
-<div style="border-radius: 5%;background: white; border: 2px solid black;display: inline-block; margin: 3px 3%; width: 304px;">
+<div style="border-radius: 5%;background: white; border: 2px solid black;display: inline-block; margin: 3px 1%; width: 304px;">
 <h5> <%= image_tag u.user.avatar.url(:thumb), style: "border-radius: 50%; float: left; margin: 0 5px 5px;" %><%= link_to u.user.username, show_user_path(u.user), style: "margin-right: 20%; font-size: 20px"%></h5>
 <p><%= image_tag u.avatar.url(:medium) %></p>
 <h5 style="font-weight: bold;"><%= link_to u.name, show_art_path(u) %></h5>
-<div style="background: rgb(219, 219, 219); border: 2px dotted black">
+<div>
   <div>Style:<%= u.style %></div>
   <div>Cost:$<%= u.price %></div>
   <div>Details:<%= u.details %></div>
