--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -9,7 +9,7 @@
           <h1>cart</h1>
           <h3>Buy unique artwork from artists across the globe</h3>
           <p style="text-align: center;"class="lead">
-            <a class="btn btn-warning btn-lg" href="/users/new" role="button">Signup</a>
+            <a class="btn btn-primary btn-lg" href="/users/new" role="button">Signup</a>
           </p>
           <p style="text-align: center;"class="lead">
             <a class="btn btn-success btn-lg" href="/sessions/new" role="button">Login</a>
@@ -20,9 +20,9 @@
       </div>
     </div>
   </section>
-<h1 style="background: rgba(71, 71, 71, 0.59); color: white;margin-top: 10px;">cartwork</h1>
+<h1 style="background: #2e6da4;color:black; opacity: 0.8;margin-top: 10px;">cartwork</h1>
 <% @arts.each do |u| %>
-<div style="border-radius:5%;border:2px solid black; background: white;display: inline-block; margin: 0 3%; width: 304px;">
+<div style="border-radius:5%;border:2px solid black; background: white;display: inline-block; margin: 0 1%; width: 304px;">
 <div> <%= image_tag u.user.avatar.url(:thumb), style: "border-radius: 50%; float: left; margin: 0 5px 5px;" %><%= link_to u.user.username, show_user_path(u.user), style: "margin-right: 20%; font-size: 20px"%></div>
 <img><%= image_tag u.avatar.url(:medium) %></img>
 <div style="font-size: 25px;"><%= link_to u.name, show_art_path(u) %></div>
@@ -38,9 +38,9 @@
 
 <% end %>
 <% if logged_in? %>
-<h1 style="background: rgba(71, 71, 71, 0.59); color: white;margin-top: 0;">cartfeed</h1>
+<h1 style="background: #2e6da4;color:black; opacity: 0.8 margin-top: 0;">cartfeed</h1>
 <% @arts.each do |u| %>
-<div style="border-radius: 5%;border:2px solid black; background: white;display: inline-block; margin: 0 3%; width: 304px;">
+<div style="border-radius: 5%;border:2px solid black; background: white;display: inline-block; margin: 0 1%; width: 304px;">
 <div> <%= image_tag u.user.avatar.url(:thumb), style: "border-radius: 50%; float: left; margin: 0 5px 5px;" %><%= link_to u.user.username, show_user_path(u.user), style: "margin-right: 20%; font-size: 20px"%></div>
 <div><%= image_tag u.avatar.url(:medium) %></div>
 <div><%= link_to u.name, show_art_path(u) %></div>
