--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
-<h1 style="background: rgb(255, 236, 110); opacity: 0.8">artists & collectors</h1>
+<h1 style="background: #2e6da4;color:black; opacity: 0.8;margin-top:0">artists & collectors</h1>
 
 <% @users.each do |u| %>
-<div style="display: inline-block; margin: 3px 3%; width: 305px;background: white;  border: 2px solid black; border-radius: 5%;">
+<div style="display: inline-block; margin: 0 1% 0; width: 305px;background: white;  border: 2px solid black; border-radius: 5%;">
 <h4>username: <%=  link_to u.username, show_user_path(u) %></h4>
 <div><%= image_tag u.avatar.url(:medium) %></div>
 <div style="margin: 5px; backround:rgb(226, 226, 226);">
