--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -1,4 +1,4 @@
-<h1 style="background: rgb(255, 236, 110); opacity: 0.8">post art</h1>
+<h1 style="background: #2e6da4;color:black; opacity: 0.8; margin-top:0">post art</h1>
 <div style="width: 40%; margin: 0 auto;"class="">
   <%= form_for @art, url: create_art_path, html: { multipart: true} do |f| %>
   <%= f.text_field :name, class:"form-control", placeholder:"Name of artwork"%>
