--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div style="width:100%"class="col-lg-6 col-sm-6">
-    <div class="card hovercard">
+    <div style="margin-top: 0;"class="card hovercard">
         <div class="card-background">
             <img class="card-bkimg" alt="" src= <%=@user.avatar %>>
             <!-- http://lorempixel.com/850/280/people/9/ -->
