--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -83,9 +83,26 @@
 
         </div>
         <div class="tab-pane fade in" id="tab2">
-          <h3>This is tab 2</h3>
+          <div class="">
+            <h1 style="text-align:centerx"><% provide(:title, @user.first) %></h1>
+            <div style="text-align: center;width:300px;height: 125px; margin:0 auto; border: 2px solid #2e6da4;border-radius: 5%;background:#c2d6e7">
+              <aside class="col-md-4">
+                <section>
+                  <h1>
+                    <%= @user.first %>
+                  </h1>
+                </section>
+                <section class="stats">
+                  <%= render 'shared/stats' %>
+                </section>
+              </aside>
+              <div class="col-md-8">
+                <%= render 'follow_form' if logged_in? %>
+              </div>
+            </div>
+          </div>
         </div>
-        <div style="border-radius: 5%;border: 2px solid black;width: 35%;margin: 50px auto; text-align:center;"class="tab-pane fade in" id="tab3">
+        <div style="border-radius: 5%;border: 2px solid #2e6da4;width: 35%;margin: 50px auto; text-align:center;background:#c2d6e7"class="tab-pane fade in" id="tab3">
           <h4>name: <%= @user.first %> <%= @user.last  %></h4>
           <h4>age: <%= @user.age %></h4>
           <h4>email: <%= @user.email %></h4>
@@ -93,8 +110,8 @@
           <h4>art collected: 0</h4>
           <h4>art bought: 0</h4>
           <h4>Likes: <%= @user.likes.count %> </h4>
-          <%= link_to "edit profile", edit_user_path(current_user), class: "btn btn-success btn-lg", style: "color: black;font-weight: bold;"%>
-          <%= link_to "delete profile", destroy_user_path, class: "btn btn-danger btn-lg", style: "color: black;font-weight: bold;", method: :delete, data: {confirm: "Are you sure you want to delete your account?"} %>
+          <%= link_to "edit profile", edit_user_path(current_user), class: "btn btn-success btn-sm", style: "color: white;font-weight: bold;"%>
+          <%= link_to "delete profile", destroy_user_path, class: "btn btn-danger btn-sm", style: "color: white;font-weight: bold;", method: :delete, data: {confirm: "Are you sure you want to delete your account?"} %>
 
 
         </div>
